# seven-ai-trading-bots

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  ERRATA.md  GOTCHAS.md  Makefile  README.md  START_HERE.md  conftest.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
backtest/: __init__.py  cash_carry.py  common.py  earnings.py  flow.py  news.py  pairs.py  trend.py
backtest/results/: sample_trend.json
data/fixtures/: flow_events.json  headlines.json  transcripts.json
docs/: architecture.md  book-reconciliations.md  hallucination_check.md
docs/prompts/: earnings-classifier.md  news-classifier.md
docs/strategies/: allocator.md  cash_carry.md  earnings.md  flow.md  fx_trend.md  news.md  pairs.md  sector_rotate.md  trend.md  vrp.md
examples/: demo_ch03.py  demo_ch09.py  run_allocator_demo.py  run_trend_demo.py  smoke_test.py
framework/: __init__.py  allocator.py  attribution.py  backtest_all.py  brokers.py  claude.py  cli.py  data.py  discord.py  metrics.py  realism.py  walk_forward.py
strategies/: __init__.py  cash_carry.py  earnings.py  flow.py  news.py  pairs.py  trend.py
strategies/bench/: __init__.py  fx_trend.py  sector_rotate.py  vrp.py
tests/: test_allocator.py  test_bench.py  test_brokers.py  test_cash_carry.py  test_claude_stub.py  test_cli_smoke.py  test_data.py  test_earnings.py  test_flow.py  test_framework.py  test_live_routing.py  test_news.py  test_no_network.py  test_pairs.py  test_realism.py  test_trend.py  test_walk_forward.py
tools/: generate_docs_charts.py  hallucination_check.py
